--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "slides":       ["welcome.html"],
   "title":        "Iterative Chef",
   "plugins":      ["resize", "iphone"],
+  "theme":        "chef",
   "transitions":  "fade"
 }
