Wow, that's a lot of slides...

--- a/config.json
+++ b/config.json
@@ -4,6 +4,14 @@
     "whoami.html",
     "talk-url.html",
     "rundown.html",
+    "the-problem.html",
+    "the-process.html",
+    "the-manual-way.html",
+    "i-am-lazy.html",
+    "on-to-code.html",
+    "shell-scripting.html",
+    "detour-scripting.html",
+    "code-already.html",
     "script-variables.html",
     "script-prereqs.html",
     "script-cache-dir.html",
@@ -12,7 +20,11 @@
     "script-config-dirs.html",
     "script-config-files.html",
     "script-service.html",
+    "script-summary.html",
+    "initial-draft.html",
+    "detour.html",
     "chef-first-recipe.html",
+    "back-to-draft.html",
     "initial-variables.html",
     "initial-prereqs.html",
     "initial-cache-dir.html",
@@ -22,7 +34,10 @@
     "initial-conf-dirs.html",
     "initial-conf-files.html",
     "initial-service.html",
+    "sysadmins-like-packages.html",
     "package-recipe.html",
+    "draft-recap.html",
+    "the-refactoring.html",
     "refactored-attributes.html",
     "refactored-variables.html",
     "refactored-prereqs.html",
@@ -31,7 +46,11 @@
     "refactored-compile.html",
     "refactored-config-dirs.html",
     "refactored-config-files.html",
-    "refactored-service.html"
+    "refactored-service.html",
+    "refactored-json-example.html",
+    "refactored-recap.html",
+    "next-steps.html",
+    "thanks.html"
   ],
   "title": "Iterative Chef",
   "plugins": [
